<resources>
    <string name="app_id">loread</string>
    <string name="app_name">Loread</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="un_category">Uncategorized</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="tag">Tag</string>
    <string name="create_category">Create category</string>
    <string name="edit_category">Edit category</string>
    <string name="select_category">Select category</string>
    <string name="approaching_the_world">Approaching the World</string>
    <string name="select_tag">Select tag</string>
    <string name="custom">Custom</string>
    <string name="select_user_agent">Select UserAgent</string>
    <string name="custom_user_agent">Custom UserAgent</string>
    <string name="enter_user_agent">Enter UserAgent</string>
    <string name="remove_custom_user_agent">Remove custom UserAgent</string>
    <string name="feed_manager">Feed manager</string>
    <string name="theme_switched_automatically">Themes have been switched automatically</string>
    <string name="feed_url_display">Feed URL: %s</string>
    <string name="site_url_display">Site URL: %s</string>
    <string name="site_remark">Site Remark</string>
    <string name="remark">Remark</string>
    <string name="article_saved_directory">Directory of articles saved</string>
    <string name="default_directory">Default directory</string>
    <string name="root_directory">Root_directory</string>
    <string name="edit_directory">Edit directory</string>
    <string name="new_directory">New directory</string>
    <string name="feed_title_as_directory">Title of the feed as directory</string>
    <string name="category_title_as_directory">Title of the categories as directory</string>
    <string name="custom_save_directory">Custom save directory</string>
    <string name="saved_to_root_directory">Saved to root directory</string>
    <string name="saved_to_directory">Saved to "%1$s" directory</string>
    <string name="star_marked">Star marked</string>
    <string name="star_marked_to_favorites">Star marked to "%1$s" favorites</string>
    <string name="new_favorites">New favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="edit_favorites">Edit favorites</string>
    <string name="etc">, etc</string>
    <string name="default_x">Default</string>
    <string name="music">Music</string>
    <string name="speak">Speak</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="login">Login</string>
    <string name="please_input_account_id">Please enter account id</string>
    <string name="please_input_account_pw">Please enter account password</string>
    <string name="no_account_register_now">No account?  Register now!</string>
    <string name="do_you_want_to_download_files">Do you want to download the file?</string>
    <string name="use_tiny_tiny_rss_fever_api">Use TinyTinyRSS and Fever with same password</string>
    <string name="plz_grant_permission_tips">Please grant permission, otherwise the APP may not work properly!</string>
    <string name="authorizing">Authorizing…</string>
    <string name="fetch_user_info">Getting Basic Information</string>
    <string name="auth_failure_please_try_again">Authorization failed, please try again.</string>
    <string name="login_please_wait">Login</string>
    <string name="login_failed_reason">Login failed, reason: %1$s</string>
    <string name="login_failed_with_reason">Login failed: %1$s</string>
    <string name="login_failure_please_try_again">Login failed, please try again</string>
    <string name="login_failure_please_check_account">Login failed, please check account and password</string>
    <string name="temporarily_not_supported">Temporarily not supported</string>
    <string name="server_api_not_supported">%1$s does not support this function</string>
    <string name="not_support_this_function">Not support this function</string>
    <string name="title_search">Search: %1$s</string>
    <plurals name="search_result_followers">
        <item quantity="one">%1$d follower | Update %1$f articles per week</item>
        <item quantity="other">%1$d followers | Update %1$f articles per week</item>
    </plurals>
    <string name="search_result_meta">Follower: %1$d | Article: %2$s per week</string>
    <string name="search_result_articles">" | Update %1$f articles per week"</string>
    <string name="search_result_summary">Intro: %1$s | Feed URL: %2$s</string>
    <string name="search_result_subs">%1$d followers | Update %2$s articles per week</string>
    <string name="search_result_last_update_time">Last update %1$s</string>
    <string name="do_you_want_to_jump_the_application">Do you want to jump to "%1$s" application?</string>
    <string name="corresponding">Corresponding</string>
    <string name="unable_to_find_app">No corresponding application found</string>
    <string name="sync_feed">Sync feed[%1$s / %2$d]</string>
    <string name="step_sync_feed_info">%1$s Sync feed info</string>
    <string name="step_sync_article_content">%1$s Sync article content [%2$d / %3$d]</string>
    <string name="step_sync_article_start">%1$s Sync article</string>
    <string name="step_sync_article_size">%1$s Sync article [%2$d]</string>
    <string name="step_sync_article_refs">%1$s Sync Article Info</string>
    <string name="fetch_article_full_content">Fetching article full content</string>
    <string name="execute_all_rules">Executing all rules</string>
    <string name="execute_rules">Executing rules</string>
    <plurals name="articles_count">
        <item quantity="one">%1$s article</item>
        <item quantity="other">%1$s articles</item>
    </plurals>
    <plurals name="has_new_articles">
        <item quantity="one">Has %1$s new article</item>
        <item quantity="other">Has %1$s new articles</item>
    </plurals>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="warning">Warning</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ua_sign">UA</string>
    <string name="override">Override</string>
    <string name="edit_success">Edit successful</string>
    <string name="edit_fail">Edit fail</string>
    <string name="edit_fail_with_reason">Edit fail: %1$s</string>
    <string name="edit_fail_with_tag_not_found">Edit fail: Tag not found</string>
    <string name="edit_fail_with_unknown_cause">Edit fail: Unknown cause</string>
    <string name="editing">Editing</string>
    <string name="response_fail">Response fail</string>
    <string name="provider_response_code">%1$s response code %2$d</string>
    <string name="article_link_is_wrong_with_reason">Article link is wrong：%1$s</string>
    <string name="response_code">Response code %1$d</string>
    <string name="return_data_exception">Return data exception</string>
    <string name="provider_return_data_exception">%1$s return data exception</string>
    <string name="tag_not_found">Tag not found</string>
    <string name="unknown_cause">Unknown cause</string>
    <string name="mask_success">Mask successful</string>
    <string name="mask_fail">Mask fail</string>
    <string name="mask_fail_with_reason">Mask fail: %1$s</string>
    <string name="exit_positive">YES ^_^</string>
    <string name="exit_negative">NO ！</string>
    <string name="are_you_sure_that_unsubscribe_this_feed_link">Are you sure you want to unsubscribe from this site?</string>
    <string name="mark_the_above_articles_as_read">Mark the above articles as read?</string>
    <string name="mark_the_below_articles_as_read">Mark the below articles as read?</string>
    <string name="includes_forced_unread">Includes "forced unread"</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="sigh_with_emotion">Sigh with emotion</string>
    <string name="sigh_with_emotion_content">路很长，纵然远望，却不知方向。\n抽支烟，思绪无常，奔跑着彷徨。\n逃不脱的苟且，到不了的远方…</string>
    <string name="select_label">Select label</string>
    <string name="sync">Sync</string>
    <string name="auto_sync">Auto sync</string>
    <string name="auto_sync_on_wifi_title">Auto sync in Wifi mode</string>
    <string name="sync_frequency">Time interval for sync</string>
    <string name="default_sync_frequency">Default interval (%1$s)</string>
    <string name="reason_for_sync_error">Reason for sync error</string>
    <string name="disable_sync_frequency">Disable sync</string>
    <string name="setting_down_img_title">Save traffic to download pictures</string>
    <string name="proxy">Proxy</string>
    <string name="enable_proxy">Enable proxy</string>
    <string name="socks5_proxy_settings">SOCKS5 proxy settings</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="plz_set_and_save_proxy_first">Please set up and save the proxy first</string>
    <string name="invalid_port_hint">The value range of the port is 1–65535</string>
    <string name="empty_is_not_allowed">Empty is not allowed</string>
    <string name="setting_auto_toggle_theme_title">Auto switch night theme</string>
    <string name="iframe_auto_height">Video optimization (height adaption, beautification control bar)</string>
    <string name="may_not_play_text_exceptions">May not play, text exceptions</string>
    <string name="block_ads">Block ads</string>
    <string name="may_cause_abnormal_images_and_web_pages">May cause abnormal images and web pages</string>
    <string name="rules">Rules</string>
    <string name="explain">Explain</string>
    <string name="save_this_rule">Save this rule</string>
    <string name="scope">Scope</string>
    <string name="conditions">Conditions</string>
    <string name="add_condition">+ Add condition</string>
    <string name="create_rule">Create rule</string>
    <string name="create_global_rule">Create global rule</string>
    <string name="action">Action</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_star">Mark star</string>
    <string name="action_summary">If the newly synchronized articles meet the following conditions, the checked action will be executed</string>
    <string name="global">Global</string>
    <string name="select_login_account">Select the logged-in account</string>
    <string name="inoreader" translatable="false">InoReader</string>
    <string name="inoreader_oauth">InoReader (OAuth)</string>
    <string name="inoreader_login">InoReader (Login)</string>
    <string name="feedly" translatable="false">Feedly</string>
    <string name="tinytinyrss" translatable="false">TinyTinyRSS</string>
    <string name="fever" translatable="false">Fever</string>
    <string name="everything_is_rssible">Everything can be RSS</string>
    <string name="developed_by_wizos">Developed by Wizos</string>
    <string name="rss_summary">In layman\'s terms, RSS is a way to subscribe to information.\n\nJust as you follow John Doe on Twitter or Jane Doe on TikTok, you can follow them by adding their FEED URLs in the "RSS Reader".\n\nThis allows you to subscribe to Youtube, Instagram, Quora, Blog, Forum …</string>
    <string name="more_introduction">More introduction</string>
    <string name="feed_url">Feed url</string>
    <string name="feed_name">Feed name</string>
    <string name="icon">Icon</string>
    <string name="inoreader_logo">Logo of InoReader</string>
    <string name="feedly_logo">Logo of Feedly</string>
    <string name="fever_logo">Logo of Fever</string>
    <string name="tiny_tiny_rss_logo">Logo of Tiny Tiny RSS</string>
    <string name="rss_logo">Logo of RSS</string>
    <string name="local_rss">Local RSS</string>
</resources>