<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/provider_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:addStatesFromChildren="true"
    android:windowDrawsSystemBarBackgrounds="true"
    tools:context=".activity.ProviderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/provider_rss_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/everything_is_rssible"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/provider_rss_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:text="@string/rss_summary" />

        <TextView
            android:id="@+id/provider_rss_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="showRSSDetail"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/more_introduction"
            android:textColor="@color/bluePrimary"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/select_login_account"
            android:visibility="gone"
            android:onClick="selectLoginAccount"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAllCaps="false"
                android:text="@string/select_login_account"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="oauthInoReader"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/provider_inoreader_logo"
                android:src="@drawable/logo_inoreader"
                android:layout_marginEnd="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/inoreader_logo" />
            <Button
                android:id="@+id/provider_inoreader_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAllCaps="false"
                android:text="@string/inoreader"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/provider_feedly"
            android:onClick="oauthFeedly"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/provider_feedly_logo"
                android:src="@drawable/logo_feedly"
                android:layout_marginEnd="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/feedly_logo" />
            <Button
                android:id="@+id/provider_feedly_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAllCaps="false"
                android:text="@string/feedly"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="loginFever"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/provider_fever_logo"
                android:src="@drawable/logo_fever"
                android:layout_marginEnd="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/fever_logo" />
            <Button
                android:id="@+id/provider_fever_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAllCaps="false"
                android:text="@string/fever"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="loginTinyRSS"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/provider_ttrss_logo"
                android:src="@drawable/logo_tinytinyrss"
                android:layout_marginEnd="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/tiny_tiny_rss_logo" />
            <Button
                android:id="@+id/provider_ttrss_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAllCaps="false"
                android:text="@string/tinytinyrss"/>
        </LinearLayout>


        <LinearLayout
            android:onClick="selectLocalRSS"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/provider_localrss_logo"
                android:src="@drawable/logo_rss"
                android:layout_marginEnd="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/rss_logo" />
            <Button
                android:id="@+id/provider_localrss_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAllCaps="false"
                android:text="@string/local_rss"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="clickAuthor"
        android:alpha="0.6"
        android:text="@string/developed_by_wizos" />

</LinearLayout>
