<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/category_header_item"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:gravity="center_vertical"
        android:background="?attr/root_view_bg"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/category_header_item_icon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            tools:src="@drawable/ic_folder"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/category_header_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:lines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/list_item_title_color"
            android:text="@string/category" />

        <ImageView
            android:id="@+id/category_header_item_create_category"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_create_folder"
            android:padding="5dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:contentDescription="@string/create_category" />

        <ImageView
            android:id="@+id/category_header_item_manage_feed"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_dashboard"
            android:padding="5dp"
            android:contentDescription="@string/feed_manager" />

    </LinearLayout>
</FrameLayout>